# python-poc

./: .gitignore  README.md  pyproject.toml
python_socket/: AddPlayerToTeam.py  IPlayerData.py  ITeamData.py  ITeamPlayerData.py  PlayerTeam.py
src/: AddPlayerToTeam.py  CreateTeam.py  FakePlayerData.py  FakePlayerRepository.py  FakeTeamData.py  FakeTeamPlayerData.py  FakeTeamPlayerRepository.py  FakeTeamRepository.py  FastApiServer.py  GetPlayers.py  GetTeams.py  IHttpServer.py  IPlayerData.py  IPlayerRepository.py  ITeamData.py  ITeamPlayerData.py  ITeamPlayerRepository.py  ITeamRepository.py  RemovePlayerFromTeam.py  Team.py  main.py
src/application/: AddPlayerToTeam.py  CreateTeam.py  GetPlayers.py  GetTeams.py  RemovePlayerFromTeam.py  add_player_to_team.py  create_player.py  create_team.py  get_player.py  get_players.py  get_players_from_team.py  get_team.py  get_teams.py  remove_player_from_team.py
src/controller/http/: players.py  teams.py
src/domain/entities/: Player.py  Team.py  player_team.py
src/domain/repository/: IPlayerRepository.py  ITeamRepository.py  iplayer_repository.py  iteam_player_repository.py  iteam_repository.py
src/infra/controller/: players.py  team_player.py  teams.py
src/infra/http/: FastApiServer.py  fast_api_server.py
src/infra/repository/: FakePlayerRepository.py  FakeTeamPlayerRepository.py  FakeTeamRepository.py  in_memory_player_repository.py  in_memory_team_player_repository.py  (+1 more)
tests/: add_player_to_team_test.py  create_player_test.py  create_team_test.py  remove_player_from_team_test.py  team_test.py  user_test.py
(+1 files in other folders)
